--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,13 @@
             --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             --transition: all 0.3s ease;
         }
-
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
+        * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             background-color: #f5f7fa;
             color: #333;
         }
-
         .container {
             max-width: 900px;
             margin: 2rem auto;
@@ -41,25 +34,14 @@
             border-radius: var(--border-radius);
             box-shadow: var(--box-shadow);
         }
-
         header {
             text-align: center;
             margin-bottom: 2rem;
             padding-bottom: 1rem;
             border-bottom: 1px solid #eee;
         }
-
-        h1 {
-            color: var(--primary-color);
-            margin-bottom: 0.5rem;
-            font-size: 2.2rem;
-        }
-
-        .subtitle {
-            color: var(--secondary-color);
-            font-size: 1.1rem;
-        }
-
+        h1 { color: var(--primary-color); margin-bottom: 0.5rem; font-size: 2.2rem; }
+        .subtitle { color: var(--secondary-color); font-size: 1.1rem; }
         .upload-section {
             background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
             padding: 2rem;
@@ -68,11 +50,7 @@
             border: 2px dashed #d1d5db;
             transition: var(--transition);
         }
-
-        .upload-section:hover {
-            border-color: var(--secondary-color);
-        }
-
+        .upload-section:hover { border-color: var(--secondary-color); }
         .upload-section h2 {
             color: var(--primary-color);
             margin-bottom: 1.5rem;
@@ -80,254 +58,127 @@
             align-items: center;
             gap: 0.5rem;
         }
-
-        .upload-section h2 i {
-            color: var(--secondary-color);
-        }
-
-        .file-upload {
-            position: relative;
-            margin-bottom: 1.5rem;
-        }
-
+        .upload-section h2 i { color: var(--secondary-color); }
+        .file-upload { position: relative; margin-bottom: 1.5rem; }
         .file-upload input[type="file"] {
-            position: absolute;
-            left: 0;
-            top: 0;
-            opacity: 0;
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
+            position: absolute; left: 0; top: 0; opacity: 0;
+            width: 100%; height: 100%; cursor: pointer;
         }
-
         .file-upload-label {
-            display: block;
-            padding: 2rem;
-            text-align: center;
-            border: 2px dashed #adb5bd;
-            border-radius: var(--border-radius);
-            background: white;
-            transition: var(--transition);
+            display: block; padding: 2rem; text-align: center;
+            border: 2px dashed #adb5bd; border-radius: var(--border-radius);
+            background: white; transition: var(--transition);
         }
-
         .file-upload-label:hover {
             border-color: var(--secondary-color);
             background: #f8f9fa;
         }
-
         .file-upload-label i {
-            font-size: 2.5rem;
-            color: var(--secondary-color);
+            font-size: 2.5rem; color: var(--secondary-color);
             margin-bottom: 1rem;
         }
-
-        .file-upload-label p {
-            margin-bottom: 0.5rem;
-            font-weight: 500;
-        }
-
-        .file-upload-label small {
-            color: #6c757d;
-        }
-
+        .file-upload-label p { margin-bottom: 0.5rem; font-weight: 500; }
+        .file-upload-label small { color: #6c757d; }
         .selected-file {
-            margin-top: 1rem;
-            padding: 0.75rem;
-            background: #e9f7fe;
-            border-radius: var(--border-radius);
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            display: none;
+            margin-top: 1rem; padding: 0.75rem;
+            background: #e9f7fe; border-radius: var(--border-radius);
+            display: none; align-items: center; gap: 0.75rem;
         }
-
-        .selected-file i {
-            color: var(--secondary-color);
-        }
-
+        .selected-file i { color: var(--secondary-color); }
         .btn {
-            display: inline-block;
-            padding: 0.75rem 1.5rem;
-            background-color: var(--primary-color);
-            color: white;
-            border: none;
-            border-radius: var(--border-radius);
-            font-size: 1rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: var(--transition);
-            text-align: center;
-            width: 100%;
+            display: inline-block; padding: 0.75rem 1.5rem;
+            background-color: var(--primary-color); color: white;
+            border: none; border-radius: var(--border-radius);
+            font-size: 1rem; font-weight: 500;
+            cursor: pointer; transition: var(--transition);
+            text-align: center; width: 100%;
         }
-
-        .btn:hover {
-            background-color: #004a7c;
-            transform: translateY(-2px);
-        }
-
-        .btn i {
-            margin-right: 0.5rem;
-        }
-
-        .btn-upload {
-            background-color: var(--accent-color);
-        }
-
-        .btn-upload:hover {
-            background-color: #e05d00;
-        }
-
+        .btn:hover { background-color: #004a7c; transform: translateY(-2px); }
+        .btn i { margin-right: 0.5rem; }
+        .btn-upload { background-color: var(--accent-color); }
+        .btn-upload:hover { background-color: #e05d00; }
         .file-list {
-            background: white;
-            border-radius: var(--border-radius);
-            box-shadow: var(--box-shadow);
-            overflow: hidden;
+            background: white; border-radius: var(--border-radius);
+            box-shadow: var(--box-shadow); overflow: hidden;
         }
-
         .file-list-header {
-            padding: 1rem 1.5rem;
-            background: var(--primary-color);
-            color: white;
-            display: flex;
-            align-items: center;
+            padding: 1rem 1.5rem; background: var(--primary-color);
+            color: white; display: flex; align-items: center;
             justify-content: space-between;
         }
-
         .file-list-header h2 {
-            font-size: 1.25rem;
-            display: flex;
-            align-items: center;
+            font-size: 1.25rem; display: flex; align-items: center;
             gap: 0.5rem;
         }
-
         .refresh-btn {
-            background: none;
-            border: none;
-            color: white;
-            cursor: pointer;
-            font-size: 1rem;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            transition: var(--transition);
+            background: none; border: none; color: white;
+            cursor: pointer; font-size: 1rem; display: flex;
+            align-items: center; gap: 0.5rem; transition: var(--transition);
         }
-
-        .refresh-btn:hover {
-            transform: rotate(180deg);
-        }
-
+        .refresh-btn:hover { transform: rotate(180deg); }
         .file-list-content {
-            max-height: 400px;
-            overflow-y: auto;
+            max-height: 400px; overflow-y: auto;
         }
-
         .file-item {
-            padding: 1rem 1.5rem;
-            border-bottom: 1px solid #eee;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            padding: 1rem 1.5rem; border-bottom: 1px solid #eee;
+            display: flex; align-items: center; justify-content: space-between;
             transition: var(--transition);
         }
-
-        .file-item:hover {
-            background-color: #f8f9fa;
-        }
-
+        .file-item:hover { background-color: #f8f9fa; }
         .file-info {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            flex: 1;
-            min-width: 0;
+            display: flex; align-items: center; gap: 1rem;
+            flex: 1; min-width: 0;
         }
-
         .file-icon {
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 6px;
-            color: white;
-            flex-shrink: 0;
+            width: 40px; height: 40px; display: flex;
+            align-items: center; justify-content: center;
+            border-radius: 6px; color: white; flex-shrink: 0;
         }
-
         .pdf-icon { background-color: #e74c3c; }
         .doc-icon { background-color: #2c5ec1; }
         .xls-icon { background-color: #1d6f42; }
         .img-icon { background-color: #e67e22; }
         .vid-icon { background-color: #9b59b6; }
-
         .file-details { flex: 1; min-width: 0; }
-
         .file-name {
-            font-weight: 500;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            font-weight: 500; white-space: nowrap;
+            overflow: hidden; text-overflow: ellipsis;
             margin-bottom: 0.25rem;
         }
-
         .file-meta {
-            font-size: 0.85rem;
-            color: #6c757d;
-            display: flex;
-            gap: 1rem;
+            font-size: 0.85rem; color: #6c757d;
+            display: flex; gap: 1rem;
         }
-
         .file-actions { display: flex; gap: 0.5rem; }
-
         .action-btn {
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            border: none;
-            background: none;
-            color: #6c757d;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 36px; height: 36px; border-radius: 50%;
+            border: none; background: none; color: #6c757d;
+            cursor: pointer; display: flex;
+            align-items: center; justify-content: center;
             transition: var(--transition);
         }
-
-        .action-btn:hover {
-            background-color: #e9ecef;
-            color: var(--dark-color);
-        }
-
+        .action-btn:hover { background-color: #e9ecef; color: var(--dark-color); }
         .download-btn:hover { color: var(--success-color); }
         .delete-btn:hover { color: var(--danger-color); }
-
         .empty-state {
-            padding: 3rem 1.5rem;
-            text-align: center;
+            padding: 3rem 1.5rem; text-align: center;
             color: #6c757d;
         }
-
-        .empty-state i { font-size: 3rem; color: #dee2e6; margin-bottom: 1rem; }
-
-        .status {
-            margin-top: 1rem;
-            padding: 0.75rem 1rem;
-            border-radius: var(--border-radius);
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            opacity: 0;
-            transition: var(--transition);
+        .empty-state i {
+            font-size: 3rem; color: #dee2e6; margin-bottom: 1rem;
         }
-
+        .status {
+            margin-top: 1rem; padding: 0.75rem 1rem;
+            border-radius: var(--border-radius);
+            display: flex; align-items: center; gap: 0.75rem;
+            opacity: 0; transition: var(--transition);
+        }
         .status.show { opacity: 1; }
         .loading { background-color: #fff3cd; color: #856404; }
         .error   { background-color: #f8d7da; color: #721c24; }
         .success { background-color: #d4edda; color: #155724; }
-
         @media (max-width: 768px) {
-            .container {
-                padding: 1.5rem;
-            }
+            .container { padding: 1.5rem; }
         }
     </style>
 </head>
@@ -375,16 +226,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
 <script>
     const uploadURL = 'https://sap-project-production.up.railway.app/api/upload';
-    const filesURL = 'https://sap-project-production.up.railway.app/api/files';
+    const filesURL  = 'https://sap-project-production.up.railway.app/api/files';
 
-    const uploadBtn = document.getElementById('uploadBtn');
-    const refreshBtn = document.getElementById('refreshBtn');
-    const fileInput = document.getElementById('fileInput');
-    const selectedFile = document.getElementById('selectedFile');
-    const fileName = document.getElementById('fileName');
-    const status = document.getElementById('status');
-    const fileListContent = document.getElementById('fileListContent');
-
+    const uploadBtn        = document.getElementById('uploadBtn');
+    const refreshBtn       = document.getElementById('refreshBtn');
+    const fileInput        = document.getElementById('fileInput');
+    const selectedFile     = document.getElementById('selectedFile');
+    const fileName         = document.getElementById('fileName');
+    const status           = document.getElementById('status');
+    const fileListContent  = document.getElementById('fileListContent');
     let file = null;
 
     fileInput.addEventListener('change', () => {
@@ -406,10 +256,9 @@
         formData.append('file', file);
 
         try {
-            status.classList.remove('error', 'success', 'loading');
-            status.classList.add('loading');
+            status.classList.remove('error', 'success');
+            status.classList.add('loading', 'show');
             status.textContent = 'Chargement en cours...';
-            status.classList.add('show');
 
             await axios.post(uploadURL, formData, {
                 headers: { 'Content-Type': 'multipart/form-data' }
@@ -421,19 +270,42 @@
             refreshFileList();
         } catch (error) {
             status.classList.remove('loading');
-            status.classList.add('error');
+            status.classList.add('error', 'show');
             status.textContent = 'Erreur lors du téléchargement.';
         }
     });
 
     refreshBtn.addEventListener('click', refreshFileList);
 
+    function getFileIcon(name) {
+        const ext = name.split('.').pop().toLowerCase();
+        switch (ext) {
+            case 'pdf':   return 'pdf-icon';
+            case 'doc':   case 'docx': return 'doc-icon';
+            case 'xls':   case 'xlsx': return 'xls-icon';
+            case 'jpg':   case 'jpeg': case 'png': return 'img-icon';
+            case 'mp4':   case 'mov': return 'vid-icon';
+            default:      return '';
+        }
+    }
+
+    function formatFileSize(bytes) {
+        const units = ['o', 'Ko', 'Mo', 'Go'];
+        let i = 0;
+        while (bytes >= 1024 && i < units.length - 1) {
+            bytes /= 1024;
+            i++;
+        }
+        return `${bytes.toFixed(1)} ${units[i]}`;
+    }
+
     async function refreshFileList() {
         try {
-            const { data } = await axios.get(filesURL);
+            const response = await axios.get(filesURL);
+            const data = response.data;
             fileListContent.innerHTML = '';
 
-            if (data.length === 0) {
+            if (!data || data.length === 0) {
                 fileListContent.innerHTML = `
                     <div class="empty-state">
                         <i class="fas fa-folder-open"></i>
@@ -444,7 +316,6 @@
                 data.forEach(file => {
                     const fileItem = document.createElement('div');
                     fileItem.classList.add('file-item');
-
                     fileItem.innerHTML = `
                         <div class="file-info">
                             <div class="file-icon ${getFileIcon(file.name)}">
@@ -453,36 +324,42 @@
                             <div class="file-details">
                                 <div class="file-name">${file.name}</div>
                                 <div class="file-meta">
-                                    <span>${file.size}</span>
+                                    <span>${formatFileSize(file.size)}</span>
                                 </div>
                             </div>
                         </div>
                         <div class="file-actions">
-                            <button class="action-btn download-btn"><i class="fas fa-download"></i></button>
-                            <button class="action-btn delete-btn"><i class="fas fa-trash"></i></button>
+                            <a href="${file.url}" class="action-btn download-btn" download="${file.name}">
+                              <i class="fas fa-download"></i>
+                            </a>
+                            <button class="action-btn delete-btn" data-public-id="${file.public_id}">
+                              <i class="fas fa-trash"></i>
+                            </button>
                         </div>
                     `;
                     fileListContent.appendChild(fileItem);
                 });
+
+                document.querySelectorAll('.delete-btn').forEach(btn => {
+                    btn.addEventListener('click', async (e) => {
+                        const publicId = e.currentTarget.getAttribute('data-public-id');
+                        if (!confirm('Voulez-vous vraiment supprimer ce fichier ?')) return;
+                        try {
+                            await axios.delete(`https://sap-project-production.up.railway.app/api/delete/${publicId}`);
+                            refreshFileList();
+                        } catch (err) {
+                            alert('Erreur lors de la suppression.');
+                        }
+                    });
+                });
             }
         } catch (error) {
             console.error('Error fetching file list:', error);
+            fileListContent.innerHTML = `<p>Impossible de charger la liste des fichiers.</p>`;
         }
     }
 
-    function getFileIcon(fileName) {
-        const ext = fileName.split('.').pop();
-        switch (ext) {
-            case 'pdf': return 'pdf-icon';
-            case 'docx': return 'doc-icon';
-            case 'xlsx': return 'xls-icon';
-            case 'jpg': case 'png': return 'img-icon';
-            case 'mp4': return 'vid-icon';
-            default: return '';
-        }
-    }
-
-    // Initial load of file list
+    // Chargement initial
     refreshFileList();
 </script>
 
